tests/ui/async-await/in-trait/indirect-recursion-issue-112047.stderr
error[E0733]: recursion in an `async fn` requires boxing
  --> $DIR/indirect-recursion-issue-112047.rs:32:5
   |
LL |     async fn second(self) {
   |     ^^^^^^^^^^^^^^^^^^^^^ recursive `async fn`
   |
   = note: a recursive `async fn` must be rewritten to return a boxed `dyn Future`
   = note: consider using the `async_recursion` crate: https://crates.io/crates/async_recursion

error: aborting due to previous error

For more information about this error, try `rustc --explain E0733`.
